----------
v1.0.0-git
----------

[jan] Allow to set custom SQL parameters.
[jan] Move search box to top menu.


-----------
v1.0.0beta1
-----------

[jan] Merge tag browser into bookmark listing.
[mjr] Add tagging support.
[cjh] Remove folders.
[cjh] Remove star ratings.
[jan] Provide default configuration files instead of .dist versions.
[jan] Enable output compression (horde@albasoft.com, Bug #8649).
[cjh] Check folder name as well as id for the pre-selected folder
      (Duck <duck@obala.net>, Bug #7627).
[jan] Add Turkish translation (METU <horde-tr@metu.edu.tr>).
[cjh] Add Latvian translation (Janis <je@ktf.rtu.lv>).
[cjh] Support for Firefox plugin that shows Trean bookmarks in the browser
      (joey@joeyhewitt.com, Request #2565).
[jan] Add Polish translation (Piotr Adamcio <adamcios@o2.pl>).
[cjh] Use YUI Grids CSS to lay out the browse grid, which wrangles IE into
      honoring our layout even when the screen is narrow (Bug #5385).
[cjh] Force folder deletion to be a POST request, and add a confirmation
      dialog.
[cjh] Fix adding bookmarks to a new folder (panni@fragstore.net,
      Bug #5068).
[cjh] Add RSS feed (Duck <duck@obala.net>, Request #1927).
[cjh] Bookmark ratings can now be changed via a dynamic, CSS-based
      star rater that saves new ratings but degrades to a real link
      without JavaScript.
[cjh] Add blocks for highest-rated and most-clicked bookmarks.
[cjh] Add a preference for how to sort bookmarks (Request #2510).
[cjh] Move bookmarks from DataTree storage to a SQL table.
[cjh] Give Trean its own Share implementation for now as hierarchical
      shares are being removed from the main Horde_Share class.
[cjh] Implement iframe-based bookmarklet for bookmarking the current page
      without a popup window.
[jan] Add Slovenian translation (Duck <duck@obala.net>).
[ben] Rename "categories" to "folders" to avoid confusion with Horde Categories.
[ben] Add a selection box to jump to a categories (simular to IMP's